--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
-/bin/
+# Java
 .classpath
 .project
 *.class
+
+# C/C++
+*.d
+*.o
+*.ko
+*.obj
+*.elf
+*.ilk
+*.map
+*.exp
+*.gch
+*.pch
+*.lib
+*.a
+*.la
+*.lo
+*.dll
+*.so
+*.so.*
+*.dylib
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Editor/IDE
+.idea/
+.vscode/
+
+# CMake
+cmake-build-*/
